# wga-finance-pack

./: .gitignore  COMMERCIAL_LICENSE.md  LICENSE.txt  README.md  pyproject.toml
docs/: 02_RUNBUNDLE_finance_smoke_v1_SUMMARY.txt  finance_provenance_20260101T163628Z.txt
examples/: sample_prices.csv
finance_pack/: engine.py
receipts/: 02_RUNBUNDLE_finance_smoke_v1_SUMMARY.txt.sha256  03_RUNBUNDLE_finance_smoke_v1.sha256.txt  04_REPORT_finance_smoke_v1.json.sha256  README.md.sha256  SHA256_MANIFEST.txt  SHA256_MANIFEST.txt.sha256  finance_cleanroom.py.sha256  finance_provenance_20260101T163628Z.txt.sha256  finance_smoke.py.sha256  finance_smoke_v1.finance_smoke_report.json.sha256  finance_smoke_v1.run_bundle.json.sha256
reports/: 04_REPORT_finance_smoke_v1.json  finance_smoke_v1.run_bundle.json
src/: finance_cleanroom.py  finance_smoke.py
tools/: pretty_finance_receipt.py
wga_finance_pack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
