[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wga-finance-pack"
version = "0.1.0"
description = "WGA Finance Pack v1: artifact-first ingest + metrics + receipts"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
wga-finance = "finance_pack.engine:main"

[tool.setuptools]
packages = ["finance_pack"]
